<resources>
    <string name="app_name">Chat App</string>
    <string name="username">Username</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="create_a_new_user" />
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="chat_app">Chat App</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message...</string>
    <string name="profile">Profile</string>
    <string name="search">Search...</string>
    <string name="seen">Seen</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="your_email">Your Email</string>
    <string name="reset">Reset</string>
    <string name="by_clicking_reset_you_will_receive_an_email_to_reset_your_password">By clicking RESET, you will receive an email to reset your Password</string>
</resources>