<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    tools:context=".StartActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_app"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        android:layout_width="342dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        android:layout_marginTop="15sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>